# envcrypt

./: .gitignore  Cargo.toml  README.md  README_TESTING.md  build.rs  install.ps1  install.sh
.cargo/: config.toml
.config/: nextest.toml
.cursor/skills/guidelines/: SKILL.md
.github/workflows/: release.yml
src/: cipher.rs  cli.rs  key.rs  lib.rs  main.rs
src/cli/: cipher.rs  decrypt.rs  encrypt.rs  key_handling.rs  mod.rs  output.rs  paths.rs
tests/: cli.rs  decrypt_basic.rs  encrypt_basic.rs  env_flag.rs  error_cases.rs  integration_test.rs  key_handling.rs  path_handling.rs  roundtrip.rs
tests/cli_tests/: ciphers.rs  decrypt.rs  encrypt.rs  env_flag.rs  errors.rs  flags.rs  keys.rs  mod.rs  paths.rs  roundtrip.rs
tests/common/: mod.rs
