[package]
name = "envcrypt"
version = "0.1.0"
edition = "2021"

[lib]
name = "envcrypt"
path = "src/lib.rs"

[[bin]]
name = "envcrypt"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
aes = "0.8"
cbc = "0.1"
cipher = "0.4"
hmac = "0.12"
sha2 = "0.10"
pbkdf2 = "0.12"
rand = "0.8"
base64 = "0.21"
rpassword = "7.0"
generic-array = "0.14"
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.10"

[profile.test]
debug = 0
