[package]
name = "envcrypt"
version = "0.1.0"
edition = "2021"

[lib]
name = "envcrypt"
path = "src/lib.rs"

[[bin]]
name = "envcrypt"
path = "src/main.rs"

[features]
default = ["cipher", "encrypt", "decrypt", "key-flag", "env-flag", "input-flag"]
cipher = ["dep:aes", "dep:cbc", "dep:cipher", "dep:hmac", "dep:sha2", "dep:pbkdf2", "dep:rand", "dep:base64", "dep:generic-array", "dep:zeroize", "dep:subtle"]
encrypt = ["cipher", "dep:clap", "dep:rpassword", "dep:anyhow"]
decrypt = ["cipher", "dep:clap", "dep:rpassword", "dep:anyhow"]
key-flag = ["dep:rpassword"]
env-flag = []
input-flag = []

[dependencies]
# CLI dependencies (optional, enabled by "cli" feature)
clap = { version = "4.5", features = ["derive"], optional = true }
rpassword = { version = "7.0", optional = true }
anyhow = { version = "1.0", optional = true }

# Cipher dependencies (optional, enabled by "cipher" feature)
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", optional = true }
cipher = { version = "0.4", optional = true }
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
pbkdf2 = { version = "0.12", optional = true }
rand = { version = "0.8", optional = true }
base64 = { version = "0.21", optional = true }
generic-array = { version = "0.14", optional = true }
zeroize = { version = "1.7", optional = true }
subtle = { version = "2.5", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.10"

[profile.test]
debug = 0
